updated some text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <div class="PageTitle">
-	<header>Title Text</header>
+	<header>Main Page</header>
 </div>
 <body>
 <img src="http://i.imgur.com/jg0bGqX.jpg" width="70%">	
