--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
 	<header>Main Page</header>
 </div>
 <body>
-<img src="http://i.imgur.com/jg0bGqX.jpg" width="70%">	
 
+<div class="CatIdentifier">
+<p>This is Mister Kitty</p>
+</div>
+
+<img src="https://i.imgur.com/FPl8OTc.jpg" width="70%">	
+
+<div class="sideBar">
+<!--A list that will eventually link to other pages on the site-->
+<p>
+Test Text
+</p>
+<ol>
+
+	<li><a href="Page2.html">Page 2</a></li>
+	<li>Item 2</li>
+	<li>Item 3</li>
+	<li>Item 4</li>
+</ol>
+
+</div>
 </body>
 
 
 </html>
 
-/n
