hopefully fixed css link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>My First Page</title>
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="./style.css">
 
 </head>
 
