started on clicker game

--- a/Page2.html
+++ b/Page2.html
@@ -1,8 +1,18 @@
 <!doctype html>
 
 <html lang="en">
-<head></head>
+<head>
+<div>
+<title>Untitled Clicker Game</title>
+</div>
+<link rel="stylesheet" type="text/css" href="./Page2.css">
+<script src="jquery-3.1.1.min.js"></script>
+</head>
+<body>
+<p class="pageName">Clicker Game</p>
+<p class='money'>0</p>
 
-
-<body>Hello</body>
+<p>Hello</p>
+<script src="./Page2.js"></script>
+</body>
 </html>
