--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>My First Page</title>
 
 <link rel="stylesheet" type="text/css" href="./style.css">
-
+<script src="jquery-3.1.1.min.js"></script>
 </head>
 
 <div class="PageTitle">
@@ -26,13 +26,14 @@ Test Text
 </p>
 <ol>
 
-	<li><a href="Page2.html">Page 2</a></li>
+	<li><a href="Page2.html">Game</a></li>
 	<li>Item 2</li>
 	<li>Item 3</li>
 	<li>Item 4</li>
 </ol>
 
 </div>
+<script src="./script.js"></script>
 </body>
 
 
