--- a/index.html
+++ b/index.html
@@ -11,28 +11,51 @@
 <div class="PageTitle">
 	<header>Main Page</header>
 </div>
-<body>
+<body link="#F7F5F6" vlink="#BFBBB1" alink="#F4EFE3">
 
 <div class="CatIdentifier">
 <p>This is Mister Kitty</p>
 </div>
 
-<img src="https://i.imgur.com/FPl8OTc.jpg" width="70%">	
+<img class="cat" src="https://i.imgur.com/FPl8OTc.jpg" width="20%">	
+<div class="colorCodes">
+<p>Colors used:</p>
+<p style="background-color:#70502C" >Tuscan Brown</p>
+<p style="background-color:#D4D0C6; color:#70502C" >Pastel Gray</p>
+<p style="background-color:#F7F5F6; color:#1E1812">White Smoke</p>
+<p style="background-color:#8FA56B">Aparagus</p>
+<p style="background-color:#1E1812">Licorice</p>
+<p>Color palette courtesy of <a href=https://coolors.co/>coolors.co</a></p>
 
+
+
+
+</div>
 <div class="sideBar">
 <!--A list that will eventually link to other pages on the site-->
 <p>
 Test Text
 </p>
-<ol>
+<ul style="list-style-type: none">
 
-	<li><a href="Page2.html">Game</a></li>
-	<li>Item 2</li>
+	<li><a href="Page2.html" >Game</a></li>
+	<li><a href="Page3.html">Empty</a></li>
 	<li>Item 3</li>
 	<li>Item 4</li>
-</ol>
+	<p>Text to experiment with scrolling div.
+	"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+	totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+	Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+	porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
+	Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate 
+	velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?" </p>
+</ul>
+</div>
+<div class="bottomBar" style="background-color: 8FA56B">
+<p> text</p>
 
 </div>
+
 <script src="./script.js"></script>
 </body>
 
