updates to game

--- a/Page2.html
+++ b/Page2.html
@@ -9,10 +9,27 @@
 <script src="jquery-3.1.1.min.js"></script>
 </head>
 <body>
-<p class="pageName">Clicker Game</p>
-<p class='money'>0</p>
+<div class="leftColumn">
 
-<p>Hello</p>
+</div>
+<div class="centralColumn">
+<p class="pageName">Clicker Game</p>
+<p id="MPS">0.00 Money per second</p>
+<p class='money'>$0.00</p>
+<div id='shop'>
+<p>Shop</p>
+
+<p id='bldg1'>building 1 (Owned=0) Cost=5</p>
+
+<p id='bldg2'>building 2 (Owned=0) Cost=20</p>
+
+
+</div>
+
+
+</div>
+
+
 <script src="./Page2.js"></script>
 </body>
 </html>
