--- a/index.html
+++ b/index.html
@@ -27,15 +27,23 @@
 <p style="background-color:#1E1812">Licorice</p>
 <p>Color palette courtesy of <a href=https://coolors.co/>coolors.co</a></p>
 
+<!--
+<div id="sideBarTab">
+<p> 
+-----------
+</p>
 </div>
-
-
-
+-->
 <div class="sideBar">
 <!--A list that will eventually link to other pages on the site-->
 <p>
 Test Text
 </p>
+
+
+
+
+
 <ul style="list-style-type: none">
 
 	<li><a href="Page2.html" >Game</a></li>
