--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body link="#F7F5F6" vlink="#BFBBB1" alink="#F4EFE3">
 
 <div class="CatIdentifier">
-<p>This is Mister Kitty</p>
+<!--<p>This is Mister Kitty</p>-->
 </div>
 
 <img class="cat" src="https://i.imgur.com/FPl8OTc.jpg" width="20%">	
